fixed profile imgs flickering on hover

--- a/style/profiles.css
+++ b/style/profiles.css
@@ -87,6 +87,9 @@ body {
   color: whitesmoke;
 }
 
+.profile img {
+  border: transparent solid 3px;
+}
 .profile:hover img {
   border: whitesmoke solid 3px;
 }
